Bug 932525 - Do APZC hit testing using the layer's screen coordinates rather than layer coordinates. r=kats